# rust-const-generics

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  rectangle.rs  rectangle_no_const_generic.rs  state.rs
src/: main.rs
