[package]
name = "rust-const-generics"
version = "0.1.0"
authors = ["Daniel Bank <daniel.p.bank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image/png"]

[dependencies]
image = "0.23.13"
ndarray = "0.14.0"
ndarray-image = "0.3.0"